# Acunetix-MCP-Server

./: .env.example  .gitignore  Acunetix-API-Documentation.yaml  Dockerfile  README.md  docker-compose.yml  implementation_plan-v2.md  pyproject.toml  requirements.txt
src/acunetix_mcp/: client.py  config.py  server.py
src/acunetix_mcp/tools/: __init__.py  agents.py  excluded_hours.py  groups.py  issue_trackers.py  reports.py  results.py  roles.py  scanning_profiles.py  scans.py  targets.py  users.py  vulnerabilities.py  wafs.py  workers.py
tests/: test_integration.py  test_smoke.py
